# libmoat

./: .gitignore  .travis.yml  API.txt  README.md  TODO
apps/: install_tm.sh  ledger_setup.sh  tear_ledger.sh  tear_tendermint.sh  tendermint_setup.sh
apps/benchmarks/: benchmark.go
apps/chaincode/: luciditee.go
apps/fx_app/common/: ledgerentry.proto  secret.proto
apps/fx_app/compute/: Makefile  barbican.json
apps/ledger_native_client/: CMakeLists.txt  LedgerClient.h  Makefile  ledger_client.cpp
apps/ledger_native_client/luciditee/: ledgerentry.grpc.pb.cc  ledgerentry.grpc.pb.h  ledgerentry.pb.cc  ledgerentry.pb.h  ledgerentry.proto
apps/ledgerclient/: CSVValue.csv  ledgerclient.go
apps/ledgerservice/: pom.xml
apps/openbanking/: pom.xml
apps/pre_app/common/rng/: .gitignore  LICENSE  Makefile.in  README  config.h.in  configure  configure.ac  drng.h  hexdump.c  hexdump.h  rdrand128.c  seed_from_rdrand.c  testdrng.c
apps/testSCC/: Makefile  interface.edl
apps/tmledgerapp/: tmledger.go  tmledgerapp.go
experimental/: PathOram.py  crypto.py  util.py
experimental/PathOram/: PathOram.py  util.py
experimental/redis/: .redis-script.py.swp  README.md
libbarbican/: BackendDBInterface.hpp  Barbican.cpp  Ledger.proto  LedgerClient.cpp  LedgerClient.h  Makefile  RocksDBInterface.cpp  RocksDBInterface.hpp  backup.txt  barbican.cpp  ledgerentry.proto
libmoat/: Debug.c  Makefile  SCC.c  libmoat.edl  shal.h
libmoat/api/: libbarbican.h  libmoat.edl  libmoat.h  libmoat_untrusted.h
libmoat/src/: Debug.c  FS.c  SCC.c  Utils.c  libmoat_untrusted.h
libuntrusted/: libmoat_untrusted.cpp
(+478 files in other folders)
